# httpc

./: .gitignore  CMakeLists.txt  ex1.txt  ex2.txt  httpc.c  httpc.h  main.c  makefile  readme.md  t  tlse.txz  unix.c  win.c
.github/workflows/: pipeline.yml
